--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>MeanApp</title>
+  <title>Tasks</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,5 +11,17 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script>
+    function gettingJSON(){
+        $.getJSON("http://api.openweathermap.org/data/2.5/weather?q=Atlanta&APPID=b0a9ee796b837e0e860b83eb1cef502f",function(json){
+            document.write(JSON.stringify(json));
+        });
+    }
+    </script>
+  </head>
+  <body>
+  <button id = "getIt" onclick = "gettingJSON()">Get JSON</button>
+
 </body>
 </html>
